[package]
name = "three"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "=7.2"
pem = "0.4"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "sync", "time"] }
warp = "0.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"
uuid = { version = "0.4", features = ["serde", "v4"] }
blake2 = "0.9"
base64 = "0.13"
openssl-sys = "0.9"
openssl = "0.10"
futures-io = "0.3.21"
